--- a/styles.scss
+++ b/styles.scss
@@ -1,31 +1,49 @@
 @import url('https://fonts.googleapis.com/css2?family=Basic&family=Nunito+Sans:ital,wght@1,300&display=swap');
-$tablet-break: 768px;
-@media (max-width: $tablet-break) {
-	header {
-		nav {
-			label {
-				img {
-					display: inline-block;
-				}
+@mixin img-size {
+	@media (max-width: 700px) {
+		img {
+			position: relative;
+			width: 100%;
+			height: auto;
+			top: 0px;
+			right: 0px;
+			left: 0px;
+			object-fit: contain;
+		}
+		@content;
+	}
+}
+@mixin burger {
+	@media (max-width: 900px) {
+		label {
+			img {
+				display: block;
 			}
 		}
+		@content;
 	}
+}
+html {
+	scroll-behavior: smooth;
 }
 body {
 	padding: 0px;
 	margin: 0px;
 	box-sizing: border-box;
+	overflow-x: hidden;
 	header {
+		background: url('https://images.unsplash.com/photo-1516541196182-6bdb0516ed27?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1868&q=80');
 		min-height: 100vh;
 		width: 100vw;
 		font-family: 'Basic', sans-serif;
 		display: grid;
 		place-items: center;
 		nav {
-			position: absolute;
+			position: fixed;
 			top: 0px;
 			right: 0px;
 			left: 0px;
+			z-index: 10000;
 			box-shadow: 1px 0px 0.35rem black;
 			display: flex;
 			flex-direction: row;
@@ -48,13 +66,11 @@ body {
 			}
 			label {
 				img {
-					width: 1.5rem;
-					height: 1.5rem;
 					display: none;
 				}
-				input {
-					display: none;
-				}
+			}
+			input {
+				display: none;
 			}
 			ul {
 				margin: auto 0px;
@@ -67,12 +83,15 @@ body {
 					padding: 0.25rem 0.5rem;
 					font-size: 1.2rem;
 					a {
-						text-decoration: none;
+						&:hover {
+							text-decoration: none;
+						}
 						color: black;
 					}
 					&:hover {
 						box-shadow: 1px 1px 0.2rem black;
 						cursor: pointer;
+						background-color: white;
 					}
 					&:active {
 						background-color: black;
@@ -81,10 +100,61 @@ body {
 					}
 				}
 			}
+			@include burger() {
+				ul {
+					visibility: hidden;
+					transform: translateY(-100%);
+					transition: transform 2s ease-in;
+					li {
+						transform: translate(200%, -100%);
+						transition: transform 2s ease-in;
+					}
+				}
+				label {
+					img {
+						margin-right: 2rem;
+						box-shadow: 1px 0 0.2rem black;
+						width: 2rem;
+						height: 2rem;
+						&:hover {
+							color: blue;
+							cursor: pointer;
+						}
+						transition: transform 1s ease-in-out;
+					}
+				}
+				input:checked {
+					& + ul {
+						visibility: visible;
+						display: flex;
+						transform: translateY(0%);
+						flex-direction: column;
+						z-index: 1000;
+						align-items: center;
+						width: 100%;
+						background-color: rgba(255, 255, 255, 0.253);
+						li {
+							transform: translate(0%, 0%);
+							margin: 1rem;
+							width: 60%;
+							padding: 1rem;
+							font-size: 1.2rem;
+							background-color: whitesmoke;
+							border-radius: 0.5rem;
+							text-align: center;
+							&:active {
+								background-color: black;
+								color: white;
+							}
+						}
+					}
+				}
+			}
 		}
 		& > div {
-			height: 60%;
-			width: 60%;
+			background-color: white;
+			min-height: 60%;
+			min-width: 60%;
 			box-shadow: 1px 1px 0.5rem black;
 			position: relative;
 			display: grid;
@@ -96,6 +166,12 @@ body {
 				left: -150px;
 				box-shadow: 1px 1px 0.2rem black;
 			}
+			@include img-size() {
+				& {
+					width: 100%;
+					margin-top: 5rem;
+				}
+			}
 			p {
 				font-size: 3rem;
 				letter-spacing: 2px;
@@ -104,7 +180,11 @@ body {
 		}
 	}
 	main {
+		img {
+			border-radius: 0.4rem;
+		}
 		#about {
+			background: url('https://images.unsplash.com/photo-1465173121987-373740a169b3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1880&q=60');
 			min-height: 100vh;
 			width: 100vw;
 			display: grid;
@@ -112,15 +192,15 @@ body {
 			& > div {
 				border-radius: 0.5rem;
 				position: relative;
+				min-height: 60%;
+				width: 60%;
+				box-shadow: 1px 1px 0.5rem black;
+				justify-self: center;
 				h1 {
 					font-family: 'Basic', sans-serif;
 					margin-top: 2rem;
 					font-size: 3rem;
 				}
-				height: 60%;
-				width: 60%;
-				box-shadow: 1px 1px 0.5rem black;
-				justify-self: center;
 				p {
 					text-align: center;
 					padding: 2rem;
@@ -134,6 +214,17 @@ body {
 					left: -175px;
 					box-shadow: 1px 1px 0.2rem black;
 				}
+				@include img-size() {
+					img {
+						display: none;
+					}
+					& {
+						width: 100%;
+					}
+				}
+			}
+			@include img-size() {
+				background: none;
 			}
 		}
 		.row:nth-child(2) {
@@ -141,6 +232,7 @@ body {
 			display: grid;
 			place-items: center;
 			font-family: 'Basic', sans-serif;
+			background-color: whitesmoke;
 			& > div {
 				border-top-left-radius: 1rem;
 				border-bottom-right-radius: 1rem;
@@ -154,6 +246,11 @@ body {
 					top: 20%;
 					right: -150px;
 					box-shadow: 1px 1px 0.2rem rgba(255, 255, 255, 0.295);
+				}
+				@include img-size() {
+					img {
+						display: none;
+					}
 				}
 				h1 {
 					margin-bottom: 2rem;
@@ -174,7 +271,7 @@ body {
 			display: grid;
 			place-items: center;
 			min-height: 100vh;
-			width: 100vw;
+			max-width: 100vw;
 			font-family: 'Basic', sans-serif;
 			& > div {
 				border-radius: 0.5rem;
@@ -182,6 +279,7 @@ body {
 				box-shadow: 1px 0 0.5rem rgba(255, 255, 255, 0.24), 1px 1px 0.5rem black;
 				min-height: 70%;
 				display: grid;
+				max-width: 100vw;
 				h1 {
 					margin: 2rem 0px;
 					font-size: 3rem;
@@ -191,7 +289,8 @@ body {
 				}
 				& > ul {
 					display: flex;
-					justify-content: space-around;
+					flex-direction: row;
+					flex-wrap: wrap;
 					li {
 						text-align: center;
 						color: black;
@@ -211,11 +310,18 @@ body {
 			}
 		}
 		#projects {
+			background-color: whitesmoke;
+			background-repeat: no-repeat;
+			background-position: center;
+			background-size: cover;
 			font-family: 'Basic', sans-serif;
 			h1 {
 				justify-self: center;
 				margin: 2rem auto;
 				font-size: 3rem;
+			}
+			& > div {
+				background-color: white;
 			}
 			.bigproj {
 				position: relative;
@@ -245,6 +351,7 @@ body {
 					box-shadow: 1px 0 0.2rem black;
 					filter: saturate(90%) brightness(90%) contrast(90%);
 				}
+
 				div {
 					display: flex;
 					justify-content: space-around;
@@ -275,7 +382,9 @@ body {
 						top: 20%;
 						left: 70%;
 					}
+					@include img-size();
 				}
+				@include img-size();
 			}
 			.smallproj {
 				min-height: 100vh;
@@ -286,67 +395,89 @@ body {
 					flex-direction: row;
 					justify-content: space-around;
 					margin: 2rem 1rem;
-					& > div {
+					position: relative;
+					@include img-size() {
+						display: block;
+						& > div + div {
+							margin-top: 1rem;
+						}
+					}
+					.card {
+						padding: 0px;
 						box-shadow: 1px 0 0.2rem black;
 						border-radius: 0.5rem;
-						padding: 2rem;
-						h3 {
-							font-family: 'Basic', sans-serif;
-							font-size: 2rem;
+						img {
+							width: 100%;
 						}
-						p {
-							font-family: 'Nunito Sans', sans-serif;
-							font-size: 1.5rem;
-							padding: 2rem 0px;
+						.card-body {
+							h3 {
+								font-family: 'Basic', sans-serif;
+								font-size: 2rem;
+							}
+							p {
+								font-family: 'Nunito Sans', sans-serif;
+								font-size: 1.5rem;
+								padding: 2rem 0px;
+							}
+							& + div {
+								a {
+									&:hover {
+										text-decoration: none;
+									}
+									button {
+										border: none;
+										outline: none;
+										padding: 0.75rem 2rem;
+										font-size: 1.2rem;
+										background-color: white;
+										box-shadow: 1px 0 0.2rem rgb(5, 3, 3);
+										border-top-left-radius: 0.5rem;
+										border-bottom-right-radius: 0.5rem;
+										&:hover {
+											color: blue;
+										}
+									}
+								}
+							}
 						}
-						div {
-							display: none;
-						}
-						// div {
-						// 	background-color: blueviolet;
-						// 	z-index: 1000;
-						// 	display: flex;
-						// 	justify-content: center;
-						// 	position: relative;
-						// 	transform: translate(-200%, -200%);
-						// 	img {
-						// 		width: 100%;
-						// 		object-fit: contain;
-						// 		object-position: center;
-						// 		position: absolute;
-						// 	}
-						// 	button {
-						// 		z-index: 2000;
-						// 		font-family: 'Nunito Sans', sans-serif;
-						// 		border: none;
-						// 		padding: 0.5rem 2.5rem;
-						// 		font-size: 1.5rem;
-						// 		background-color: white;
-						// 		box-shadow: 1px 0 0.2rem black;
-						// 		border-top-left-radius: 1rem;
-						// 		border-bottom-right-radius: 1rem;
-						// 		outline: none;
-						// 		&:hover {
-						// 			cursor: pointer;
-						// 			color: rgb(18, 10, 128);
-						// 			text-decoration: underline;
-						// 		}
-						// 		&:active {
-						// 			background-color: black;
-						// 			color: white;
-						// 		}
-						// 	}
-						// }
-						// transition: transform 2s ease-in;
-						// overflow: hidden;
-						// &:hover {
-						// 	& > div {
-						// 		transform: translate(0%, 0%);
-						// 	}
-						// }
 					}
 				}
 			}
 		}
 	}
+	footer {
+		background: url('https://images.unsplash.com/photo-1555134473-a8e88487e828?ixlib=rb-1.2.1&w=1080&q=60');
+		background-position: right;
+		background-repeat: no-repeat;
+		background-size: cover;
+		min-height: 50vh;
+		display: grid;
+		align-items: center;
+		font-family: 'Basic', sans-serif;
+		margin-top: 3rem;
+		box-shadow: 1px 0 0.5rem black;
+		background-color: rgba(0, 0, 0, 0.082);
+		ul {
+			display: flex;
+			list-style-type: none;
+			justify-content: space-around;
+			flex-wrap: wrap;
+			li {
+				padding: 0.5rem 2rem;
+				font-size: 1.5rem;
+				box-shadow: 1px 0 0.5rem black;
+				border-top-left-radius: 0.75rem;
+				border-bottom-right-radius: 0.75rem;
+				a {
+					&:hover {
+						text-decoration: none;
+					}
+					color: black;
+				}
+			}
+		}
+	}
+}
+.fa-github {
+	margin-right: 0.2rem;
 }
