--- a/styles.css
+++ b/styles.css
@@ -128,18 +128,18 @@ body header nav ul li:active {
     visibility: hidden;
     -webkit-transform: translateY(-100%);
             transform: translateY(-100%);
-    -webkit-transition: -webkit-transform 2s ease-in;
-    transition: -webkit-transform 2s ease-in;
-    transition: transform 2s ease-in;
-    transition: transform 2s ease-in, -webkit-transform 2s ease-in;
+    -webkit-transition: -webkit-transform 1s ease-in;
+    transition: -webkit-transform 1s ease-in;
+    transition: transform 1s ease-in;
+    transition: transform 1s ease-in, -webkit-transform 1s ease-in;
   }
   body header nav ul li {
-    -webkit-transform: translate(200%, -100%);
-            transform: translate(200%, -100%);
-    -webkit-transition: -webkit-transform 2s ease-in;
-    transition: -webkit-transform 2s ease-in;
-    transition: transform 2s ease-in;
-    transition: transform 2s ease-in, -webkit-transform 2s ease-in;
+    -webkit-transform: translateX(-200%);
+            transform: translateX(-200%);
+    -webkit-transition: -webkit-transform 1s ease-in;
+    transition: -webkit-transform 1s ease-in;
+    transition: transform 1s ease-in;
+    transition: transform 1s ease-in, -webkit-transform 1s ease-in;
   }
   body header nav label img {
     margin-right: 2rem;
@@ -158,9 +158,6 @@ body header nav ul li:active {
   }
   body header nav input:checked + ul {
     visibility: visible;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-transform: translateY(0%);
             transform: translateY(0%);
     -webkit-box-orient: vertical;
@@ -175,12 +172,12 @@ body header nav ul li:active {
     background-color: rgba(255, 255, 255, 0.253);
   }
   body header nav input:checked + ul li {
-    -webkit-transform: translate(0%, 0%);
-            transform: translate(0%, 0%);
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
     margin: 1rem;
     width: 60%;
     padding: 1rem;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     background-color: whitesmoke;
     border-radius: 0.5rem;
     text-align: center;
@@ -393,7 +390,6 @@ body main #knowledge > div {
   min-height: 70%;
   display: -ms-grid;
   display: grid;
-  max-width: 100vw;
 }
 
 body main #knowledge > div h1 {
@@ -694,5 +690,31 @@ body footer ul li a:hover {
 
 .fa-github {
   margin-right: 0.2rem;
+}
+
+@-webkit-keyframes anim {
+  from {
+    -webkit-transform: translatey(20%);
+            transform: translatey(20%);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+    opacity: 1;
+  }
+}
+
+@keyframes anim {
+  from {
+    -webkit-transform: translatey(20%);
+            transform: translatey(20%);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+    opacity: 1;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
