--- a/styles.scss
+++ b/styles.scss
@@ -104,10 +104,10 @@ body {
 				ul {
 					visibility: hidden;
 					transform: translateY(-100%);
-					transition: transform 2s ease-in;
+					transition: transform 1s ease-in;
 					li {
-						transform: translate(200%, -100%);
-						transition: transform 2s ease-in;
+						transform: translateX(-200%);
+						transition: transform 1s ease-in;
 					}
 				}
 				label {
@@ -126,7 +126,6 @@ body {
 				input:checked {
 					& + ul {
 						visibility: visible;
-						display: flex;
 						transform: translateY(0%);
 						flex-direction: column;
 						z-index: 1000;
@@ -134,11 +133,11 @@ body {
 						width: 100%;
 						background-color: rgba(255, 255, 255, 0.253);
 						li {
-							transform: translate(0%, 0%);
+							transform: translateX(0%);
 							margin: 1rem;
 							width: 60%;
 							padding: 1rem;
-							font-size: 1.2rem;
+							font-size: 1.5rem;
 							background-color: whitesmoke;
 							border-radius: 0.5rem;
 							text-align: center;
@@ -279,7 +278,6 @@ body {
 				box-shadow: 1px 0 0.5rem rgba(255, 255, 255, 0.24), 1px 1px 0.5rem black;
 				min-height: 70%;
 				display: grid;
-				max-width: 100vw;
 				h1 {
 					margin: 2rem 0px;
 					font-size: 3rem;
@@ -480,4 +478,14 @@ body {
 }
 .fa-github {
 	margin-right: 0.2rem;
+}
+@keyframes anim {
+	from {
+		transform: translatey(20%);
+		opacity: 0;
+	}
+	to {
+		transform: translateY(0%);
+		opacity: 1;
+	}
 }
